--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,9 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-#pandas = "==2.2.2"
-#bs4 = "=0.0.2"
-#altair = "==5.4.1"
+pandas = "==2.2.2"
+bs4 = "=0.0.2"
+altair = "==5.4.1"
 lxml = "==5.3.0"
 streamlit = "==1.38.0"
 watchdog = "==5.0.2"
