--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,9 @@ altair = "==5.4.1"
 lxml = "==5.3.0"
 streamlit = "==1.38.0"
 watchdog = "==5.0.2"
-
+graphviz = "*"
+streamlit-flow-component = "*"
+geopy = "*"
 
 [dev-packages]
 
