--- a/Pipfile
+++ b/Pipfile
@@ -10,9 +10,8 @@ altair = "==5.4.1"
 lxml = "==5.3.0"
 streamlit = "==1.38.0"
 watchdog = "==5.0.2"
-graphviz = "*"
-streamlit-flow-component = "*"
-geopy = "*"
+streamlit-flow-component = "==1.2.9"
+geopy = "==2.4.1"
 
 [dev-packages]
 
